--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src/VidPlayer.jsx --out-file dist/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Abhishek279-alt/jb-vid-player.git"
+  },
+  "homepage": "https://github.com/Abhishek279-alt/jb-vid-player",
   "author": "Abhishek Singh Rajput",
   "license": "ISC",
   "devDependencies": {
