--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "https://github.com/Abhishek279-alt/jb-vid-player.git"
   },
+  "bugs": {
+    "url": "https://github.com/Abhishek279-alt/jb-vid-player/issues"
+  },
   "homepage": "https://github.com/Abhishek279-alt/jb-vid-player",
   "author": "Abhishek Singh Rajput",
   "license": "ISC",
