--- a/package.json
+++ b/package.json
@@ -23,5 +23,14 @@
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1"
-  }
+  },
+  "keywords": [
+    "jb-vid-player",
+    "vid",
+    "video",
+    "player",
+    "video player",
+    "vid player",
+    "jb"
+  ]
 }
